--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
